[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rebound"
version = "5.0.0"
description = "An open-source multi-purpose N-body code"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "GPL-3.0-only" }
authors = [
    { name = "Hanno Rein", email = "hanno@hanno-rein.de" },
]
keywords = [
    "astronomy",
    "astrophysics",
    "nbody",
    "integrator",
    "symplectic",
    "wisdom-holman",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/hannorein/rebound/"

[tool.setuptools.packages.find]
include = ["rebound*"]

[tool.setuptools.package-data]
rebound = ["../src/*.h"]
